fixed issue with background image not covering all of large screens

--- a/src/App.css
+++ b/src/App.css
@@ -31,8 +31,9 @@ h2 {
   padding: 0 17% 10% 17%;
   background-image: url('./background_photo_desktop.jpg');
   background-size: cover;
-  background-position: center;
   background-repeat: no-repeat;
+  padding-bottom: 95.49%;
+  height: 0;
   font-family: 'Work Sans', sans-serif;
   font-weight: 500;
   color: #ffffff;
